tests/deploy_errors/flow_bad_script/error.txt
Error: 
   10 | deploy test
      | ^^^^^^^^^^^ Argument `badger` is required, but no defaults are provided in the definition and no final values in the instance
